# Multi-Broker-Portfolio-Tracker

./: .gitignore  README.md
flutter-multi-broker-profolio/backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
flutter-multi-broker-profolio/backend/app/: __init__.py  main.py
flutter-multi-broker-profolio/backend/app/adapters/: __init__.py  _common.py  base.py
flutter-multi-broker-profolio/backend/app/api/: __init__.py  connections.py  credential_context.py  fx.py  ops.py  portfolio.py  quotes.py  router.py
flutter-multi-broker-profolio/backend/app/core/: __init__.py  e2e_backend.py  logging.py  settings.py  tracing.py
flutter-multi-broker-profolio/backend/app/middleware/: __init__.py  auth.py  logging.py  request_id.py
flutter-multi-broker-profolio/backend/app/models/: __init__.py  domain.py  errors.py
flutter-multi-broker-profolio/backend/app/services/: __init__.py  adapter_factory.py  aggregator.py  alert_worker.py  connection_status.py  dependencies.py  fx.py  quote_hub.py  vault.py
flutter-multi-broker-profolio/backend/app/workers/: __init__.py  alerts.py
flutter-multi-broker-profolio/backend/tests/: backend.py  conftest.py  test_auth.py  test_connections_route.py  test_errors.py  test_logging.py  test_models.py  test_ops.py  test_portfolio_fx_routes.py  test_quotes_route.py  test_request_id.py  test_settings.py  test_smoke.py
flutter-multi-broker-profolio/backend/tests/adapters/: test_binance.py  test_binance_integration.py  test_common.py  test_contract.py  test_futu.py  test_futu_client_helpers.py  test_ibkr.py  (+5 more)
(+261 files in other folders)
