[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbp-backend"
version = "0.1.0"
description = "Multi-Broker Portfolio Tracker — backend proxy service"
requires-python = ">=3.11"
authors = [{ name = "MBP Team" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "firebase-admin>=6.4",
    "python-jose[cryptography]>=3.3",
    "cryptography>=42.0",
    "prometheus-client>=0.20",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-python-jose",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "."
packages = ["app"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["firebase_admin.*", "prometheus_client.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.coverage.run]
source = ["app"]
omit = ["app/adapters/*", "app/services/*", "app/workers/*"]
